--- a/src/view/frmContacto.fxml
+++ b/src/view/frmContacto.fxml
@@ -1,34 +1,41 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.TitledPane?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.201" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.FrmContactoController">
+<AnchorPane id="AnchorPane" prefHeight="493.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.FrmContactoController">
    <children>
-      <TitledPane animated="false" collapsible="false" layoutX="8.0" layoutY="7.0" prefHeight="328.0" prefWidth="585.0" text="Complete los campos:">
+      <TitledPane animated="false" collapsible="false" layoutX="8.0" layoutY="7.0" prefHeight="433.0" prefWidth="585.0" text="Complete los campos:">
         <content>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="366.0" prefWidth="581.0">
                <children>
                   <Label layoutX="14.0" layoutY="23.0" text="Apellido: " />
                   <TextField fx:id="txfApellido" layoutX="86.0" layoutY="19.0" prefHeight="28.0" prefWidth="182.0" />
-                  <Label layoutX="292.0" layoutY="31.0" text="Nombre:" />
-                  <TextField fx:id="txfNombre" layoutX="364.0" layoutY="27.0" prefHeight="28.0" prefWidth="182.0" />
-                  <Label layoutX="14.0" layoutY="85.0" text="Telfono: " />
-                  <TextField fx:id="txfTelefono" layoutX="86.0" layoutY="81.0" prefHeight="28.0" prefWidth="182.0" />
-                  <Label layoutX="300.0" layoutY="85.0" text="Calle: " />
-                  <TextField fx:id="txfCalle" layoutX="364.0" layoutY="79.0" prefHeight="28.0" prefWidth="182.0" />
-                  <Label layoutX="29.0" layoutY="139.0" text="Nro:" />
-                  <TextField fx:id="txfNro" layoutX="86.0" layoutY="133.0" prefHeight="28.0" prefWidth="182.0" />
-                  <Label layoutX="292.0" layoutY="139.0" text="Localidad: " />
-                  <ComboBox fx:id="cmbLocalidad" layoutX="368.0" layoutY="133.0" prefHeight="28.0" prefWidth="177.0" />
-                  <TextArea fx:id="txaObs" layoutX="86.0" layoutY="180.0" prefHeight="93.0" prefWidth="460.0" />
-                  <Label layoutX="36.0" layoutY="180.0" text="Obs:" />
+                  <Label layoutX="17.0" layoutY="74.0" text="Nombre:" />
+                  <TextField fx:id="txfNombre" layoutX="86.0" layoutY="68.0" prefHeight="28.0" prefWidth="182.0" />
+                  <Label layoutX="17.0" layoutY="117.0" text="Telfono: " />
+                  <TextField fx:id="txfTelefono" layoutX="86.0" layoutY="111.0" prefHeight="28.0" prefWidth="182.0" />
+                  <Label layoutX="26.0" layoutY="206.0" text="Calle: " />
+                  <TextField fx:id="txfCalle" layoutX="92.0" layoutY="200.0" prefHeight="28.0" prefWidth="182.0" />
+                  <Label layoutX="32.0" layoutY="161.0" text="Nro:" />
+                  <TextField fx:id="txfNro" layoutX="91.0" layoutY="155.0" prefHeight="28.0" prefWidth="92.0" />
+                  <Label layoutX="22.0" layoutY="243.0" text="Localidad: " />
+                  <ComboBox fx:id="cmbLocalidad" layoutX="105.0" layoutY="237.0" prefHeight="28.0" prefWidth="269.0" />
+                  <TextArea fx:id="txaObs" layoutX="91.0" layoutY="278.0" prefHeight="93.0" prefWidth="460.0" />
+                  <Label layoutX="42.0" layoutY="278.0" text="Obs:" />
+                  <ImageView fx:id="imvContactos" fitHeight="196.0" fitWidth="200.0" layoutX="339.0" layoutY="19.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@chino.jpg" />
+                     </image>
+                  </ImageView>
                </children>
             </AnchorPane>
         </content>
@@ -36,7 +43,7 @@
             <Font size="17.0" />
          </font>
       </TitledPane>
-      <Button fx:id="btnGuardar" defaultButton="true" layoutX="371.0" layoutY="348.0" mnemonicParsing="false" onAction="#guardar_OnAction" prefHeight="26.0" prefWidth="92.0" text="Guardar" />
-      <Button fx:id="btnCancelar" cancelButton="true" layoutX="478.0" layoutY="348.0" mnemonicParsing="false" onAction="#cancelar_OnAction" prefHeight="26.0" prefWidth="83.0" text="Cancelar" />
+      <Button fx:id="btnGuardar" defaultButton="true" layoutX="396.0" layoutY="453.0" mnemonicParsing="false" onAction="#guardar_OnAction" prefHeight="26.0" prefWidth="92.0" text="Guardar" />
+      <Button fx:id="btnCancelar" cancelButton="true" layoutX="503.0" layoutY="453.0" mnemonicParsing="false" onAction="#cancelar_OnAction" prefHeight="26.0" prefWidth="83.0" text="Cancelar" />
    </children>
 </AnchorPane>
