--- a/src/view/frmAgenda.fxml
+++ b/src/view/frmAgenda.fxml
@@ -1,110 +1,120 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ContextMenu?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.SeparatorMenuItem?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.cell.PropertyValueFactory?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane id="AnchorPane" prefHeight="457.0" prefWidth="793.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.201" fx:controller="controller.frmAgendaController">
-   <children>
-      <BorderPane layoutX="14.0" layoutY="14.0" prefHeight="457.0" prefWidth="793.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-         <top>
-            <MenuBar BorderPane.alignment="CENTER">
-              <menus>
-                <Menu mnemonicParsing="false" text="Archivo">
-                  <items>
-                        <Menu mnemonicParsing="false" text="Nuevo">
-                          <items>
-                          <MenuItem fx:id="mniNuevoContacto" mnemonicParsing="false" onAction="#mniNuevoContacto_OnAction" text="Contacto" />
-                            <MenuItem fx:id="mniNuevaLocalidad" mnemonicParsing="false" onAction="#mniNuevaLocalidad_OnAction" text="Localidad" />
-                              <MenuItem fx:id="mniNuevaProvincia" mnemonicParsing="false" onAction="#mniNuevaProvincia_OnAction" text="Provincia" />
-                          </items>
+<AnchorPane id="AnchorPane" prefHeight="457.0" prefWidth="793.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.frmAgendaController">
+    <children>
+        <BorderPane layoutX="14.0" layoutY="14.0" prefHeight="457.0" prefWidth="793.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+            <top>
+                <MenuBar BorderPane.alignment="CENTER">
+                    <menus>
+                        <Menu mnemonicParsing="false" text="Archivo">
+                            <items>
+                                <Menu mnemonicParsing="false" text="Nuevo">
+                                    <items>
+                                        <MenuItem fx:id="mniNuevoContacto" mnemonicParsing="false" onAction="#mniNuevoContacto_OnAction" text="Contacto" />
+                                        <MenuItem fx:id="mniNuevaLocalidad" mnemonicParsing="false" onAction="#mniNuevaLocalidad_OnAction" text="Localidad" />
+                                        <MenuItem fx:id="mniNuevaProvincia" mnemonicParsing="false" onAction="#mniNuevaProvincia_OnAction" text="Provincia" />
+                                    </items>
+                                </Menu>
+                                <SeparatorMenuItem mnemonicParsing="false" />
+                                <MenuItem fx:id="mniCerrar" mnemonicParsing="false" onAction="#cerrar_OnAction" text="Cerrar" />
+                            </items>
                         </Menu>
-                        <SeparatorMenuItem mnemonicParsing="false" />
-                        <MenuItem fx:id="mniCerrar" mnemonicParsing="false" onAction="#cerrar_OnAction" text="Cerrar" />
-                  </items>
-                </Menu>
-                <Menu mnemonicParsing="false" text="Editar">
-                  <items>
-                        <Menu mnemonicParsing="false" text="Modificar">
-                          <items>
-                              <MenuItem fx:id="mniModificarLocalidad" mnemonicParsing="false" onAction="#mniModificarLocalidad_OnAction" text="Localidades" />
-                              <MenuItem fx:id="mniModificarProvincia" mnemonicParsing="false" onAction="#mniModificarProvincia_OnAction" text="Provincias" />
-                          </items>
+                        <Menu mnemonicParsing="false" text="Editar">
+                            <items>
+                                <Menu mnemonicParsing="false" text="Modificar">
+                                    <items>
+                                        <MenuItem fx:id="mniModificarLocalidad" mnemonicParsing="false" onAction="#mniModificarLocalidad_OnAction" text="Localidades" />
+                                        <MenuItem fx:id="mniModificarProvincia" mnemonicParsing="false" onAction="#mniModificarProvincia_OnAction" text="Provincias" />
+                                    </items>
+                                </Menu>
+                                <Menu mnemonicParsing="false" text="Eliminar">
+                                    <items>
+                                        <MenuItem fx:id="mniEliminarLocalidad" mnemonicParsing="false" onAction="#mniEliminarLocalidad_OnAction" text="Localidades" />
+                                        <MenuItem fx:id="mniEliminarProvincia" mnemonicParsing="false" onAction="#mniEliminarProvincia_OnAction" text="Provincias" />
+                                    </items>
+                                </Menu>
+                            </items>
                         </Menu>
-                        <Menu mnemonicParsing="false" text="Eliminar">
-                           <items>
-                              <MenuItem fx:id="mniEliminarLocalidad" mnemonicParsing="false" onAction="#mniEliminarLocalidad_OnAction" text="Localidades" />
-                              <MenuItem fx:id="mniEliminarProvincia" mnemonicParsing="false" onAction="#mniEliminarProvincia_OnAction" text="Provincias" />
-                           </items>
+                        <Menu mnemonicParsing="false" text="Ayuda">
+                            <items>
+                                <MenuItem fx:id="mniDocumentacion" mnemonicParsing="false" onAction="#mniDocumentacion_OnAction" text="Documentacion" />
+                                <MenuItem fx:id="mniAcercaDe" mnemonicParsing="false" onAction="#mniAcercaDe_OnAction" text="Acerca de" />
+                            </items>
                         </Menu>
-                  </items>
-                </Menu>
-                <Menu mnemonicParsing="false" text="Ayuda">
-                  <items>
-                    <MenuItem fx:id="mniDocumentacion" mnemonicParsing="false" onAction="#mniDocumentacion_OnAction" text="Documentacion" />
-                        <MenuItem fx:id="mniAcercaDe" mnemonicParsing="false" onAction="#mniAcercaDe_OnAction" text="Acerca de" />
-                  </items>
-                </Menu>
-              </menus>
-            </MenuBar>
-         </top>
-         <bottom>
-            <GridPane prefHeight="30.0" prefWidth="721.0" BorderPane.alignment="CENTER">
-              <columnConstraints>
-                <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                  <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-              </columnConstraints>
-              <rowConstraints>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-              </rowConstraints>
-               <children>
-                  <Button fx:id="btnNuevo" mnemonicParsing="false" onAction="#btnNuevo_OnAction" text="Nuevo Contacto" />
-                  <Button fx:id="btnEditar" mnemonicParsing="false" onAction="#btnEditar_OnAction" text="Editar Contacto" GridPane.columnIndex="1" />
-                  <Button fx:id="btnEliminar" mnemonicParsing="false" onAction="#btnEliminar_OnAction" text="Eliminar Contacto" GridPane.columnIndex="2" />
-               </children>
-            </GridPane>
-         </bottom>
-         <center>
-            <TableView fx:id="tbvContactos" prefHeight="309.0" prefWidth="793.0" BorderPane.alignment="CENTER">
-              <columns>
-                  <TableColumn prefWidth="75.0" text="Nro" >
-                      <cellValueFactory>
-                          <javafx.scene.control.cell.PropertyValueFactory property="nro" /> 
-                      </cellValueFactory>
-                  </TableColumn>
-                  <TableColumn prefWidth="193.0" text="Contacto" >
-                      <cellValueFactory>
-                          <javafx.scene.control.cell.PropertyValueFactory property="contacto" />
-                      </cellValueFactory>
-                  </TableColumn>
-                  <TableColumn prefWidth="181.0" text="Domicilio" >
-                      <cellValueFactory>
-                          <javafx.scene.control.cell.PropertyValueFactory property="domicilio" /> 
-                      </cellValueFactory>
-                  </TableColumn>
-                  <TableColumn prefWidth="107.0" text="Telefono" >
-                      <cellValueFactory>
-                          <javafx.scene.control.cell.PropertyValueFactory property="telefono" /> 
-                      </cellValueFactory>
-                  </TableColumn>
-                  <TableColumn prefWidth="235.0" text="Observaciones" >
-                      <cellValueFactory>
-                          <javafx.scene.control.cell.PropertyValueFactory property="obs" /> 
-                      </cellValueFactory>
-                  </TableColumn>
-              </columns>
-            </TableView>
-         </center>
-      </BorderPane>
-   </children>
+                    </menus>
+                </MenuBar>
+            </top>
+            <bottom>
+                <GridPane prefHeight="30.0" prefWidth="721.0" BorderPane.alignment="CENTER">
+                    <columnConstraints>
+                        <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                        <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                        <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                    </columnConstraints>
+                    <rowConstraints>
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    </rowConstraints>
+                    <children>
+                        <Button fx:id="btnNuevo" mnemonicParsing="false" onAction="#btnNuevo_OnAction" text="Nuevo Contacto" />
+                        <Button fx:id="btnEditar" mnemonicParsing="false" onAction="#btnEditar_OnAction" text="Editar Contacto" GridPane.columnIndex="1" />
+                        <Button fx:id="btnEliminar" mnemonicParsing="false" onAction="#btnEliminar_OnAction" text="Eliminar Contacto" GridPane.columnIndex="2" />
+                    </children>
+                </GridPane>
+            </bottom>
+            <center>
+                <TableView fx:id="tbvContactos" prefHeight="309.0" prefWidth="793.0" BorderPane.alignment="CENTER">
+                    <columns>
+                        <TableColumn prefWidth="75.0" text="Nro">
+                            <cellValueFactory>
+                                <javafx.scene.control.cell.PropertyValueFactory property="nro" /> 
+                            </cellValueFactory>
+                        </TableColumn>
+                        <TableColumn prefWidth="193.0" text="Contacto">
+                            <cellValueFactory>
+                                <javafx.scene.control.cell.PropertyValueFactory property="contacto" />
+                            </cellValueFactory>
+                        </TableColumn>
+                        <TableColumn prefWidth="181.0" text="Domicilio">
+                            <cellValueFactory>
+                                <javafx.scene.control.cell.PropertyValueFactory property="direccion" /> 
+                            </cellValueFactory>
+                        </TableColumn>
+                        <TableColumn prefWidth="107.0" text="Telefono">
+                            <cellValueFactory>
+                                <javafx.scene.control.cell.PropertyValueFactory property="telefono" /> 
+                            </cellValueFactory>
+                        </TableColumn>
+                        <TableColumn prefWidth="235.0" text="Observaciones">
+                            <cellValueFactory>
+                                <javafx.scene.control.cell.PropertyValueFactory property="obs" /> 
+                            </cellValueFactory>
+                        </TableColumn>
+                    </columns>
+                    <contextMenu>
+                        <ContextMenu>
+                            <items>
+                                <MenuItem mnemonicParsing="false" text="Editar" />
+                                <MenuItem mnemonicParsing="false" text="Borrar" onAction="#ctxBorrar_OnAction" />
+                            </items>
+                        </ContextMenu>
+                    </contextMenu>
+                </TableView>
+            </center>
+        </BorderPane>
+    </children>
 </AnchorPane>
